Simprede_dashboard/dashboard.log

  You can now view your Streamlit app in your browser.

  URL: http://0.0.0.0:8501

  For better performance, install the Watchdog module:

  $ xcode-select --install
  $ pip install watchdog
            
2025-06-21 10:18:26.399 Script compilation error
Traceback (most recent call last):
  File "/Users/ruicarvalho/Desktop/projects/SIMPREDE/Simprede_dashboard/env/lib/python3.11/site-packages/streamlit/runtime/scriptrunner/script_runner.py", line 571, in _run_script
    code = self._script_cache.get_bytecode(script_path)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/ruicarvalho/Desktop/projects/SIMPREDE/Simprede_dashboard/env/lib/python3.11/site-packages/streamlit/runtime/scriptrunner/script_cache.py", line 72, in get_bytecode
    filebody = magic.add_magic(filebody, script_path)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/ruicarvalho/Desktop/projects/SIMPREDE/Simprede_dashboard/env/lib/python3.11/site-packages/streamlit/runtime/scriptrunner/magic.py", line 45, in add_magic
    tree = ast.parse(code, script_path, "exec")
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/ruicarvalho/Desktop/projects/SIMPREDE/Simprede_dashboard/app.py", line 825
    if not df_previsao_melhorada.empty and not df_scraper.empty:
IndentationError: unexpected indent
2025-06-21 10:18:26.402 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.
2025-06-21 10:21:02.160 Script compilation error
Traceback (most recent call last):
  File "/Users/ruicarvalho/Desktop/projects/SIMPREDE/Simprede_dashboard/env/lib/python3.11/site-packages/streamlit/runtime/scriptrunner/script_runner.py", line 571, in _run_script
    code = self._script_cache.get_bytecode(script_path)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/ruicarvalho/Desktop/projects/SIMPREDE/Simprede_dashboard/env/lib/python3.11/site-packages/streamlit/runtime/scriptrunner/script_cache.py", line 72, in get_bytecode
    filebody = magic.add_magic(filebody, script_path)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/ruicarvalho/Desktop/projects/SIMPREDE/Simprede_dashboard/env/lib/python3.11/site-packages/streamlit/runtime/scriptrunner/magic.py", line 45, in add_magic
    tree = ast.parse(code, script_path, "exec")
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/ruicarvalho/Desktop/projects/SIMPREDE/Simprede_dashboard/app.py", line 825
    if not df_previsao_melhorada.empty and not df_scraper.empty:
IndentationError: unexpected indent
2025-06-21 10:21:02.164 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.
2025-06-21 10:22:44.946 Script compilation error
Traceback (most recent call last):
  File "/Users/ruicarvalho/Desktop/projects/SIMPREDE/Simprede_dashboard/env/lib/python3.11/site-packages/streamlit/runtime/scriptrunner/script_runner.py", line 571, in _run_script
    code = self._script_cache.get_bytecode(script_path)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/ruicarvalho/Desktop/projects/SIMPREDE/Simprede_dashboard/env/lib/python3.11/site-packages/streamlit/runtime/scriptrunner/script_cache.py", line 72, in get_bytecode
    filebody = magic.add_magic(filebody, script_path)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/ruicarvalho/Desktop/projects/SIMPREDE/Simprede_dashboard/env/lib/python3.11/site-packages/streamlit/runtime/scriptrunner/magic.py", line 45, in add_magic
    tree = ast.parse(code, script_path, "exec")
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/ruicarvalho/Desktop/projects/SIMPREDE/Simprede_dashboard/app.py", line 825
    if not df_previsao_melhorada.empty and not df_scraper.empty:
IndentationError: unexpected indent
2025-06-21 10:22:44.950 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.
2025-06-21 10:22:46.711 Script compilation error
Traceback (most recent call last):
  File "/Users/ruicarvalho/Desktop/projects/SIMPREDE/Simprede_dashboard/env/lib/python3.11/site-packages/streamlit/runtime/scriptrunner/script_runner.py", line 571, in _run_script
    code = self._script_cache.get_bytecode(script_path)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/ruicarvalho/Desktop/projects/SIMPREDE/Simprede_dashboard/env/lib/python3.11/site-packages/streamlit/runtime/scriptrunner/script_cache.py", line 72, in get_bytecode
    filebody = magic.add_magic(filebody, script_path)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/ruicarvalho/Desktop/projects/SIMPREDE/Simprede_dashboard/env/lib/python3.11/site-packages/streamlit/runtime/scriptrunner/magic.py", line 45, in add_magic
    tree = ast.parse(code, script_path, "exec")
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/ruicarvalho/Desktop/projects/SIMPREDE/Simprede_dashboard/app.py", line 825
    if not df_previsao_melhorada.empty and not df_scraper.empty:
IndentationError: unexpected indent
2025-06-21 10:22:46.713 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.
